ording system user side